# chronicle

./: Cargo.toml  README.md
src/: lib.rs  main.rs  models.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: diff.rs  git.rs  list.rs  mod.rs  serve.rs  snapshot.rs  status.rs  sync.rs
src/commands/: list.rs  mod.rs  snapshot.rs
src/core/: diff.rs  git_sync.rs  mod.rs  scan.rs  snapshot.rs
src/database/: compute_diff.rs  insert_snapshot.rs  mod.rs  query.rs  schema.sql
src/fs/: helpers.rs  mod.rs  scanner.rs
src/models/: diff.rs  file_metric.rs  metadata.rs  mod.rs  snapshot.rs  snapshot_metadata.rs  snapshot_summary.rs  table.rs
src/output_formatter/: mod.rs  tsv.rs
src/server/: mod.rs
src/utils/: data_dir.rs  file_lister.rs  file_size.rs  hashing.rs  mod.rs
tests/: integration_test.rs
web/: index.html  main.js  style.css
