[package]
name = "chronicle"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
ignore = "0.4.25"
indicatif = "0.18.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
