[package]
name = "chronicle"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
dirs-next = "2.0.0"
gix = "0.76.0"
ignore = "0.4.25"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"

[dev-dependencies]
tempfile = "3.23.0"
